# Cpp_Templates_Exercises

./: .gitignore  CMakeLists.txt  ClassTemplate.cpp  FunctionTemplate.cpp  FunctionTemplateSolution.cpp  Macro.c  MacroTemplate.cpp  Makefile  Pair.h  README.md  TemplateMetaprogramming.cpp  TemplatesSTL.cpp
Solutions/: ClassTemplate.cpp  FunctionTemplate.cpp  MacroTemplate.cpp  Pair.h  TemplateMetaprogramming.cpp  TemplatesSTL.cpp
